crates/keron-lang/tests/corpus/errors/check/top_level_match_non_void_arm.keron
# A top-level match statement must be Void: a value-producing arm has
# nowhere to go.
match os_type() {
  "Macos" => for pkg in ["ripgrep"] {
    reconcile brew(pkg)
  },
  _ => 42,
}
